KEN-12: UPDATE more refactor
